Fix line breaks in chat

--- a/src/components/bubble/bubble.css
+++ b/src/components/bubble/bubble.css
@@ -30,6 +30,7 @@
   padding: 10px;
   min-width: 10vw;
   display: inline-block;
+  white-space: pre-wrap;
 }
 
 .right-bubble {
