--- a/src/screens/room/messageBox/messageBox.css
+++ b/src/screens/room/messageBox/messageBox.css
@@ -47,5 +47,6 @@
     padding-left: 10px;
     padding-right: 10px;
     height: 9vh;
+    white-space: pre-wrap;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
